# crm-api

./: .env  .gitignore  README.rst  alembic.ini  pyproject.toml
crm_api/crm/: app.py  auth_bearer.py  functions_jwt.py
crm_api/crm/config/: base.py  config.py
crm_api/crm/locales/: es.yml
crm_api/crm/models/: business.py  options.py  skeleton.py  user.py
crm_api/crm/models/contracts/: contract.py
crm_api/crm/models/invoices/: invoice.py
crm_api/crm/models/partner/: contacto.py  partner.py
crm_api/crm/models/stock/: location.py  movement.py  product.py  warehouse.py
crm_api/crm/models/users/: user.py
crm_api/crm/routes/: auth.py  business.py  skeleton.py  user.py
crm_api/crm/routes/contracts/: contract.py
crm_api/crm/routes/invoices/: invoice.py
crm_api/crm/routes/offers/: offer.py
crm_api/crm/routes/partner/: contact.py  partner.py  relationtype.py
crm_api/crm/routes/resources/: status.py
crm_api/crm/routes/stock/: location.py  measure.py  product.py
crm_api/crm/routes/users/: user.py
crm_api/crm/schemas/: business.py  skeleton.py  user.py
crm_api/crm/schemas/contracts/: contracts.py
crm_api/crm/schemas/partner/: contact.py  partner.py
crm_api/crm/schemas/resources/: result_object.py  (+1 more)
crm_api/crm/services/: auth.py  business.py  skeleton.py  users.py
migrations/versions/: 0477154e6a82_add_invoices_table.py  586198893d89_update_field_is_provider_table.py  609feba3cd28_added_tables_business_options_skeleton_.py  a7eb018101b0_modify_partner_table.py  bcf490ffa5ba_.py  e8e95db6a8c8_add_contacts_table.py
tests/: test_crm_api.py
(+17 files in other folders)
