[tool.poetry]
name = "crm-api"
version = "0.1.0"
description = "API para pequeño CRM"
authors = ["Miguel Angel Lau"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
itsdangerous = "^2.1.2"
passlib = "^1.7.4"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
PyJWT = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
